--- a/styles.css
+++ b/styles.css
@@ -87,13 +87,14 @@ body{
     width: 100px;
     height: 100px;
     display: block;
-    margin-left: 60px;
+    margin-left: 10px;
     margin-top: -20px;
 }
 .weather .information  {
+    margin-top: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 20px;
+    padding: 0px 40px;
 }
 
